--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=PaymentService
-razorpay.key=rzp_test_EX3VKYvbIU2HEp
-razorpay.secret=GDfpWkCbCXOfpppojImxSWkG
+
+#But this is not good practice to put them in environment prop file directly, rather we should read from the runtime env variables
+razorpay.key=${RAZORPAY_KEY}
+razorpay.secret=${RAZORPAY_SECRET}
