--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=PaymentService
 
-# to make sure the secrets not get expiosed we have to pass them by system environemtn variables at run time
+# to make sure the secrets not get expiosed we have to pass them by system environment variables at run time
 razorpay.key=${RAZORPAY_KEY}
 razorpay.secret=${RAZORPAY_SECRET}
